# piecewise-affine-lower-bounding

./: .gitignore  LICENSE  README.md
.github/workflows/: python-build.yml
palb/: Cargo.toml
palb/examples/: generator.rs  simple.rs
palb/src/: lib.rs  subgradient.rs
palb_py/: Cargo.toml  pyproject.toml
palb_py/examples/simple/: main.py  palb_py_example.html  pyproject.toml
palb_py/src/palb_py/: __init__.py
