[package]
name = "palb"
version = "0.1.2"
edition = "2024"
readme = "../README.md"

[dependencies]
itertools = "0.14.0"
mimalloc = "0.1.48"
num-traits = "0.2.19"
ordered-float = "5.1.0"
rand = "0.9.2"
take-until = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
approx = "0.5.1"
rand = { version = "0.9.0" }
rand_distr = "0.5.0"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
